--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "latest",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-json-viewer": "^2.1.0",
     "react-redux": "^7.1.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2"
