--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dummy-jp": "stsysd/dummy-jp.git",
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
     "react": "^16.9.0",
