--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-json-viewer": "^2.1.0",
     "react-redux": "^7.1.0",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "styled-components": "^4.3.2"
   },
   "license": "ISC",
   "devDependencies": {
